feat: add time series visitors analytics
