# api/docs/swagger.json
@@ -37,15 +37,13 @@
                         "type": "string",
                         "description": "start date",
                         "name": "startDate",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     },
                     {
                         "type": "string",
                         "description": "end date",
                         "name": "endDate",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -100,15 +98,13 @@
                         "type": "string",
                         "description": "start date",
                         "name": "startDate",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     },
                     {
                         "type": "string",
                         "description": "end date",
                         "name": "endDate",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -163,15 +159,13 @@
                         "type": "string",
                         "description": "start date",
                         "name": "startDate",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     },
                     {
                         "type": "string",
                         "description": "end date",
                         "name": "endDate",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -226,15 +220,13 @@
                         "type": "string",
                         "description": "start date",
                         "name": "startDate",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     },
                     {
                         "type": "string",
                         "description": "end date",
                         "name": "endDate",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -289,15 +281,13 @@
                         "type": "string",
                         "description": "start date",
                         "name": "startDate",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     },
                     {
                         "type": "string",
                         "description": "end date",
                         "name": "endDate",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -352,15 +342,13 @@
                         "type": "string",
                         "description": "start date",
                         "name": "startDate",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     },
                     {
                         "type": "string",
                         "description": "end date",
                         "name": "endDate",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -422,6 +410,67 @@
                     },
                     "500": {
                         "description": "Failed to resolve geolocation or track event",
+                        "schema": {
+                            "$ref": "#/definitions/main.APIStatus"
+                        }
+                    }
+                }
+            }
+        },
+        "/analytics/visitors": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Retrieves visitors",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Analytics"
+                ],
+                "summary": "Get Visitors",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "app tracking ID",
+                        "name": "trackingID",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "start date",
+                        "name": "startDate",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "end date",
+                        "name": "endDate",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "stats fetched successfully",
+                        "schema": {
+                            "$ref": "#/definitions/main.VisitorResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "invalid request paramaters",
+                        "schema": {
+                            "$ref": "#/definitions/main.APIStatus"
+                        }
+                    },
+                    "500": {
+                        "description": "failed to fetch visitors",
                         "schema": {
                             "$ref": "#/definitions/main.APIStatus"
                         }
@@ -538,7 +587,7 @@
             "type": "object",
             "properties": {
                 "created_at": {
-                    "type": "string"
+                    "$ref": "#/definitions/sql.NullTime"
                 },
                 "name": {
                     "type": "string"
@@ -696,6 +745,40 @@
                 },
                 "visitor_count": {
                     "type": "integer"
+                }
+            }
+        },
+        "main.VisitorResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/main.VisitorStats"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "main.VisitorStats": {
+            "type": "object",
+            "properties": {
+                "bucket": {
+                    "type": "string"
+                },
+                "visitors": {
+                    "type": "integer"
+                }
+            }
+        },
+        "sql.NullTime": {
+            "type": "object",
+            "properties": {
+                "time": {
+                    "type": "string"
+                },
+                "valid": {
+                    "description": "Valid is true if Time is not NULL",
+                    "type": "boolean"
                 }
             }
         }
